--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,53 @@
-blinker==1.8.2certifi==2024.12.14charset-normalizer==3.4.0click==8.1.7colorama==0.4.6contourpy==1.3.1cycler==0.12.1decorator==4.4.2filelock==3.16.1Flask==3.0.3fonttools==4.55.3fsspec==2024.12.0gunicorn==23.0.0idna==3.10imageio==2.37.0imageio-ffmpeg==0.6.0itsdangerous==2.2.0Jinja2==3.1.4joblib==1.5.1kiwisolver==1.4.7llvmlite==0.44.0MarkupSafe==2.1.5matplotlib==3.10.0moviepy==1.0.3mpmath==1.3.0networkx==3.4.2numba==0.61.2numpy==2.2.6opencv-python==4.10.0.84opencv-python-headless==4.10.0.84opencv-transforms==0.0.6packaging==24.2pandas==2.2.3pillow==11.0.0proglog==0.1.12psutil==7.0.0pyparsing==3.2.0pyserial==3.5python-dateutil==2.9.0.post0python-dotenv==1.1.0pytz==2024.2requests==2.32.3scikit-learn==1.7.1scipy==1.14.1six==1.17.0sk-video==1.1.10sympy==1.13.1threadpoolctl==3.6.0tqdm==4.67.1typing-extensions==4.12.2tzdata==2024.2urllib3==2.2.3websockets==12.0Werkzeug==3.0.3
+blinker==1.8.2
+certifi==2024.12.14
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+decorator==4.4.2
+filelock==3.16.1
+Flask==3.0.3
+fonttools==4.55.3
+fsspec==2024.12.0
+gunicorn==23.0.0
+idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.5.1
+kiwisolver==1.4.7
+llvmlite==0.44.0
+MarkupSafe==2.1.5
+matplotlib==3.10.0
+moviepy==1.0.3
+mpmath==1.3.0
+networkx==3.4.2
+numba==0.61.2
+numpy==2.2.6
+opencv-python-headless==4.10.0.84
+opencv-transforms==0.0.6
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+proglog==0.1.12
+psutil==7.0.0
+pyparsing==3.2.0
+pyserial==3.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2024.2
+requests==2.32.3
+scikit-learn==1.7.1
+scipy==1.14.1
+six==1.17.0
+sk-video==1.1.10
+sympy==1.13.1
+threadpoolctl==3.6.0
+tqdm==4.67.1
+typing-extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+websockets==12.0
+Werkzeug==3.0.3
